Klasa BookStore, czas wejścia i wyjścia w klasie Customer

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,6 +17,7 @@
                 "Human.cpp",
                 "Seller.cpp",
                 "Time.cpp",
+                "BookStore.cpp",
                 "-o",
                 "${workspaceFolder}\\main.exe"
             ],
