Początek klasy Orders

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -18,6 +18,7 @@
                 "Seller.cpp",
                 "Time.cpp",
                 "BookStore.cpp",
+                "Orders.cpp",
                 "-o",
                 "${workspaceFolder}\\main.exe"
             ],
