--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,28 +64,11 @@
         "stop_token": "cpp",
         "thread": "cpp",
         "variant": "cpp",
-        "charconv": "cpp",
-        "format": "cpp",
+        "any": "cpp",
+        "codecvt": "cpp",
         "forward_list": "cpp",
-        "ios": "cpp",
-        "locale": "cpp",
-        "stack": "cpp",
-        "xfacet": "cpp",
-        "xhash": "cpp",
-        "xiosbase": "cpp",
-        "xlocale": "cpp",
-        "xlocbuf": "cpp",
-        "xlocinfo": "cpp",
-        "xlocmes": "cpp",
-        "xlocmon": "cpp",
-        "xlocnum": "cpp",
-        "xloctime": "cpp",
-        "xmemory": "cpp",
-        "xstddef": "cpp",
-        "xstring": "cpp",
-        "xtr1common": "cpp",
-        "xtree": "cpp",
-        "xutility": "cpp",
-        "queue": "cpp"
+        "ranges": "cpp",
+        "span": "cpp",
+        "valarray": "cpp"
     }
 }
