Zamówienia, dodawanie, anulowanie, modyfikacja

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -86,6 +86,12 @@
         "xtr1common": "cpp",
         "xtree": "cpp",
         "xutility": "cpp",
-        "queue": "cpp"
+        "queue": "cpp",
+        "any": "cpp",
+        "codecvt": "cpp",
+        "filesystem": "cpp",
+        "ranges": "cpp",
+        "span": "cpp",
+        "valarray": "cpp"
     }
 }
