--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -16,6 +16,7 @@
                 "Bookshelf.cpp",
                 "Customer.cpp",
                 "Date.cpp",
+                "JsonFile.cpp",
                 
                 "Time.cpp",
                 "BookStore.cpp",
